[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menus/ControlsMenu.gd" type="Script" id=1]
[ext_resource path="res://Alata-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 2 )

[node name="ControlsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StandardControls" type="Button" parent="."]
margin_left = 81.6516
margin_top = 390.421
margin_right = 309.652
margin_bottom = 433.421
custom_fonts/font = SubResource( 1 )
text = "Standard Controls"

[node name="DvorakControls" type="Button" parent="."]
margin_left = 345.634
margin_top = 390.086
margin_right = 546.634
margin_bottom = 433.086
custom_fonts/font = SubResource( 2 )
text = "Dvorak Controls"

[node name="BackButton" type="Button" parent="."]
margin_left = 390.683
margin_top = 466.0
margin_right = 621.683
margin_bottom = 557.0
custom_fonts/font = SubResource( 3 )
text = "Back"

[node name="CloseMenus" type="Button" parent="."]
margin_left = 947.736
margin_right = 1022.74
margin_bottom = 63.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="testButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StandardControls" to="." method="_on_StandardControls_pressed"]
[connection signal="pressed" from="DvorakControls" to="." method="_on_DvorakControls_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="CloseMenus" to="." method="_on_CloseMenus_pressed"]
[connection signal="pressed" from="testButton" to="." method="_on_testButton_pressed"]
